@@ -1,3 +1,6 @@
+HEAD
+	+ Set noexpiry of administrator account only in DC mode, prevents
+	  error when user exists with a different name like "administrador"
 5.0.1
 	+ Remove acl and user_xattr mount options related code as ext4 already
 	  has them enabled by default
